contrast fix

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header {
   justify-content: center;
   text-decoration: none;
   font-weight: 600;
-  color: #6070ff;
+  color: #396df2;
   animation: rotation 2.5s;
 }
 
@@ -144,7 +144,7 @@ header {
 
 .contact a {
   padding-top: 20px;
-  color: #7f8cff;
+  color: #396df2;
   text-decoration: none;
   font-family: Poppins, sans-serif;
   font-size: 19px;
@@ -273,7 +273,7 @@ h2 {
 .desc-list ul {
   gap: 12px;
   display: flex;
-  color: #7a869a;
+  color: #414958;
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 600;
@@ -312,11 +312,11 @@ h2 {
 
 .button-list li a {
   text-decoration: none;
-  color: #6070ff;
+  color: #4653ce;
 }
 
 .btn button {
-  background-color: #6070ff;
+  background-color: #396df2;
   margin: 10px;
   padding: 10px 20px;
   border: 1px solid #396df2;
